# spotify-api

./: .env  db.sqlite3  manage.py  pyproject.toml
app/: urls.py  views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
